# elegoo-smartcar-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  commands.rs  config.rs  connection.rs  input.rs  main.rs  sensor.rs  video.rs
src/ui/: joystick.rs  main_panel.rs  mod.rs  racing_wheel.rs  settings.rs  status_bar.rs  video_window.rs
