[package]
name = "elegoo-smartcar"
version = "1.0.0"
edition = "2021"
description = "Cross-platform controller for ELEGOO Smart Car V4"
authors = ["Anton <anton@openclaw.ai>"]

[dependencies]
# GUI
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui-winit = "0.31"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (for MJPEG streaming)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Image decoding
image = "0.25"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/time
chrono = "0.4"

# Misc
anyhow = "1"
futures-util = "0.3.32"
socket2 = "0.6.3"

# Optional gamepad support (requires libudev-dev on Linux)
# gilrs = "0.11"
# Enable with: cargo build --features gamepad
[features]
default = []
gamepad = ["gilrs"]

[dependencies.gilrs]
version = "0.11"
optional = true

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
